Fixed the alignment

--- a/styles/bookingConfirmationPage.css
+++ b/styles/bookingConfirmationPage.css
@@ -3,14 +3,15 @@ body {
     color: white;
     font-family: Arial, sans-serif;
     text-align: center;
+    margin: 0;
 }
 
 .container {    
-    max-width: 400px;
+    max-width: 350px;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
-    margin: 10px; /* Center the container horizontally */
+    margin: 10px auto; /* Center the container horizontally */
 }
 
 h1 {
